<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoPlayers"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageButton
        android:id="@+id/goBackOnePlayer2"
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="52dp"
        android:background="@color/white"
        android:contentDescription="@string/goBack"
        android:onClick="goBack"
        android:src="@mipmap/arrowleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="382dp"
        android:layout_height="145dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/first_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/second_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/third_image"
            android:src="@android:drawable/divider_horizontal_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="134dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/fourth_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/fifth_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/sixth_image"
            android:src="@android:drawable/divider_horizontal_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="383dp"
        android:layout_height="138dp"
        android:layout_marginTop="348dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/seventh_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/eighth_image"
            android:src="@android:drawable/divider_horizontal_dark" />

        <ImageView
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/ninth_image"
            android:src="@android:drawable/divider_horizontal_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="407dp"
        android:layout_height="57dp"
        android:layout_marginTop="656dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ties"
            android:layout_width="210dp"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/ties"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreTie"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="408dp"
        android:layout_height="74dp"
        android:layout_marginTop="512dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wins"
            android:layout_width="201dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/wins"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreWin"
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginTop="588dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loses"
            android:layout_width="207dp"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/loses"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scorePcWin"
            android:layout_width="57dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>