<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewFunctionActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/onePlayer"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/twoPlayers"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="317dp"
        android:layout_height="71dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/tictactoeGamemode"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="317dp"
        android:layout_height="71dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/tictactoe"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ImageButton
        android:id="@+id/bt1"
        android:layout_width="148dp"
        android:layout_height="139dp"
        android:background="@color/white"
        android:contentDescription="@string/one_player"
        android:src="@mipmap/videogame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <ImageButton
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/two_players"
        android:src="@mipmap/twoplayers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <ImageButton
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/goBack"
        android:src="@mipmap/arrowleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

</androidx.constraintlayout.widget.ConstraintLayout>