<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity">

    <EditText
        android:id="@+id/first_num"
        android:layout_width="259dp"
        android:layout_height="73dp"
        android:autofillHints=""
        android:backgroundTint="#2487FE"
        android:ems="10"
        android:fontFamily="@font/holtwood_one_sc"
        android:hint="@string/first_value"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/second_num"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:autofillHints=""
        android:backgroundTint="#2487FE"
        android:ems="10"
        android:fontFamily="@font/holtwood_one_sc"
        android:hint="@string/second_value"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:backgroundTint="#2487FE"
        android:fontFamily="@font/holtwood_one_sc"
        android:onClick="calcular"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/result"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcButton"
        app:layout_constraintVertical_bias="0.076" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="219dp"
        android:layout_height="75dp"
        android:contentDescription="@string/spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <ImageButton
        android:id="@+id/calcGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/goBack"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        app:srcCompat="@mipmap/arrowleft" />
</androidx.constraintlayout.widget.ConstraintLayout>