<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/calcButton"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:background="@color/white"
        android:contentDescription="@string/calc_label"
        android:onClick="goToCalculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        app:srcCompat="@mipmap/calculadora" />

    <ImageButton
        android:id="@+id/alumnListButton"
        android:layout_width="153dp"
        android:layout_height="157dp"
        android:background="@color/white"
        android:contentDescription="@string/alumnList_label"
        android:onClick="goToList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        app:srcCompat="@mipmap/alumnado" />

    <ImageButton
        android:id="@+id/webViewButton"
        android:layout_width="154dp"
        android:layout_height="139dp"
        android:background="@color/white"
        android:contentDescription="@string/webView_label"
        android:onClick="goToWeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916"
        app:srcCompat="@mipmap/google" />

    <ImageButton
        android:id="@+id/newFunctionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:contentDescription="@string/newFunction_label"
        android:onClick="goToNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        app:srcCompat="@mipmap/tictactoe" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="289dp"
        android:layout_height="88dp"
        android:elegantTextHeight="false"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/mainWelcome"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/welcome"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />
</androidx.constraintlayout.widget.ConstraintLayout>