<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AlumnListActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="319dp"
        android:layout_height="63dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/AlumnList"
        android:layout_width="321dp"
        android:layout_height="302dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="317dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/alumnList"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/alumnListGoBack"
        android:layout_width="168dp"
        android:layout_height="94dp"
        android:background="@color/white"
        android:contentDescription="@string/goBack"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

</androidx.constraintlayout.widget.ConstraintLayout>